--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -106,7 +106,7 @@
               <x>0</x>
               <y>0</y>
               <width>298</width>
-              <height>64</height>
+              <height>74</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -132,18 +132,18 @@
                  <property name="minimumSize">
                   <size>
                    <width>0</width>
-                   <height>50</height>
+                   <height>60</height>
                   </size>
                  </property>
                  <property name="maximumSize">
                   <size>
                    <width>16777215</width>
-                   <height>50</height>
+                   <height>60</height>
                   </size>
                  </property>
                  <property name="font">
                   <font>
-                   <pointsize>10</pointsize>
+                   <pointsize>9</pointsize>
                    <bold>false</bold>
                    <strikeout>false</strikeout>
                    <kerning>true</kerning>
@@ -164,8 +164,8 @@
                  </property>
                  <property name="iconSize">
                   <size>
-                   <width>50</width>
-                   <height>50</height>
+                   <width>60</width>
+                   <height>60</height>
                   </size>
                  </property>
                  <property name="shortcut">
@@ -331,6 +331,11 @@
          </property>
          <item>
           <widget class="QTextBrowser" name="InformationDisplay">
+           <property name="font">
+            <font>
+             <pointsize>10</pointsize>
+            </font>
+           </property>
            <property name="markdown">
             <string>No meeting selected or added.
 
@@ -340,8 +345,8 @@
             <string notr="true">&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:14pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:9px; margin-bottom:9px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;No meeting selected or added.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:9px; margin-bottom:9px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;No meeting selected or added.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
            <property name="openExternalLinks">
             <bool>true</bool>
@@ -374,7 +379,7 @@ p, li { white-space: pre-wrap; }
      <x>0</x>
      <y>0</y>
      <width>645</width>
-     <height>17</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
